# teanga

./: .gitignore  404.html  Cargo.toml  README.md  data_model.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml  python-test.yml  python.yml  static.yml
conlu_corpus/: README.txt  bho_bhtb-ud-test.yaml  conllu2yaml_function_example.py  conllu2yamlnew.py  conllu2yamlnew2.py  ga_twittirish-ud-train.yaml  ga_twittirish-ud-train1.yaml  genmetadata .py  grc_ptnk-ud-test.yaml  import json.py  sga_dipsgg-ud-test.yaml  sga_dipsgg-ud-test1.yaml  zh_patentchar-ud-test.yaml  zh_patentchar-ud-test1.yaml
docs/: conf.py  index.md  index.rst
docs/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  teanga.html
examples/: tokenizer_service.py
explanation/: index.html
mkdocs-docs/: index.md  reference-corpus.md
mkdocs-docs/_build/: 404.html  index.html  objects.inv
mkdocs-docs/reference/: reference-corpus.md  reference-document.md
mkdocs-docs/scripts/: gen_pages.py
mkdocs-docs/src/: explanation.md  index.md
python/teanga/: corpus.py  document.py  service.py
reference/reference-corpus/: index.html
reference/reference-document/: index.html
search/: search_index.json
src/: lib.rs  serialization.rs
teanga/: __init__.py  corpus.py  document.py  filter.py  groups.py  layer_desc.py  model.py  rdf.py  service.py  stream.py  transforms.py  utils.py
tests/: test_conllu.py  test_corpus.py  test_doc.py  test_rdf.py  test_spacy.py  test_utils.py
(+39 files in other folders)
