[tool.poetry]
name = "teanga"
version = "0.1.0"
description = "Teanga - Layer-based annotation of corpora with NLP"
authors = ["John P. McCrae <john@mccr.ae>"]
license = "Apache License v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
